refactor: streamline LangChain trace validation and traversal logic